@@ -1,3 +1,13 @@
+2006-02-02  Peter Harvey  <peter.a.harvey@gmail.com>
+
+	* src/bookmarks/ephy-bookmark-action.c
+	
+	Allow bookmarks on the toolbar to be dragged.
+
+	* src/bookmarks/ephy-topic-action.c
+	
+	Remove redundant function call.
+	
 2006-02-02  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-session.c: (save_yourself_cb), (die_cb),
